--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,5 @@
-.mainContainer {
-	background-color: rgba(33, 37, 41);
+.mainContainer{
+background-color:rgba(33, 37, 41);
 }
 
 /* Start Header Styles */
@@ -8,50 +8,24 @@
 	font-weight: 800px;
 	font-size: 20px;
 }
-
 .navbar-dark .navbar-nav .nav-link:hover {
 	color: #00bfcb !important;
 }
-
 .navbar-dark .btn-primary:hover {
 	background-color: #00bfcb !important;
 	border-color: #36df66 !important;
 }
 /* End Header Styles */
 
-/* Start Section Styles */
-.aboutSection{
-	background: linear-gradient(rgba(0,0,0,.1), rgba(0,0,0,.1)), url('../img/aboutHero.jpg');
-	background-size: cover;
-	background-position: center center;
-	background-attachment: fixed;
-}
-.serviceSection {
-	background: linear-gradient(rgba(0, 0, 0, .1), rgba(0, 0, 0, .1)), url('../img/aboutHero.jpg');
-	background-size: cover;
-	background-position: center center;
-	background-attachment: fixed;
-}
-.eventSection{
-	background: linear-gradient(rgba(0,0,0,.1), rgba(0,0,0,.1)), url('../img/aboutHero.jpg');
-	background-size: cover;
-	background-position: center center;
-	background-attachment: fixed;
-}
-#hero .heroContent{
-	height: 70vh;
-}
-/* End Section Styles */
-
 .logo {
-	width: 4%;
-	height: 4%;
+	width:  4%;
+	height:  4%;
 }
 
 /* ==== NAV BAR NAV LINKS STYLES END === */
 
 .w-100 {
-
+	
 	height: 600px !important;
 }
 
@@ -60,7 +34,7 @@
 	font-size: 17px;
 }
 
-.sideNav :hover {
+.sideNav :hover{
 	background-color: #00bfcb !important;
 	color: black !important;
 }
@@ -76,7 +50,7 @@ tr td:last-child {
 	white-space: nowrap;
 }
 
-.mapSection {
+.mapSection{
 	background-color: white;
 }
 
@@ -86,24 +60,43 @@ tr td:last-child {
 .titleUnderline {
 	width: 80%;
 	height: 2px;
-	margin: auto;
+	margin:auto;
 }
 
+/* ==== HERO STYLES === */
+
+.aboutSection{
+	background: linear-gradient(rgba(0,0,0,.1), rgba(0,0,0,.1)), url('../img/aboutHero.jpg');
+		background-size: cover;
+			background-position: center center;
+			background-attachment: fixed;
+}
+
+.serviceSection {
+	background: linear-gradient(rgba(0, 0, 0, .1), rgba(0, 0, 0, .1)), url('../img/aboutHero.jpg');
+	background-size: cover;
+	background-position: center center;
+	background-attachment: fixed;
+}
+
+#hero .heroContent{
+	height: 70vh;
+}
 
 
 
 /* ==== CARD STYLES === */
 
-.cards {
-	border: none;
+.cards{
+	border:none;
 	background-color: white;
 
 }
 
-.card-img-top {
+.card-img-top{	
 	border-radius: 15%;
 	display: block;
-
+		
 }
 
 /* ==== MAP STYLES === */
@@ -121,16 +114,16 @@ tr td:last-child {
 	font-size: 20px;
 }
 
-.navbar-light .navbar-nav .nav-link.active {
+.navbar-light .navbar-nav .nav-link.active{
 	color: rgba(244, 4, 4, 0.55);
 }
 
-.searchBtn {
+.searchBtn{
 	background: rgb(82, 21, 203);
-	color: red;
+	color:red;
 }
 
-#book-now-form {
+#book-now-form{
 	text-align: left;
 }
 
@@ -142,7 +135,7 @@ tr td:last-child {
 	text-align: left;
 }
 
-#register-form {
+#register-form{
 	text-align: left;
 
 }
@@ -152,30 +145,31 @@ tr td:last-child {
 
 }
 
-.btn-close {
+.btn-close{
 	color: red;
 }
 
 .modal-header{
 	background-color: rgb(20,188,206);
-	color: white;
+	color: ghostwhite;
 }
-.modal-body{
-	background-color: #f5fff5;
-}
-.form-label{
-	font-weight: 400;		
-}
+	.modal-body{
+		background-color: white;
+	}
+	.form-label{
+		font-weight: 400;		
+	}
 .modalBtn{
-background-color: rgb(40,56,70);
-color: white;
+	background-color: rgb(40,56,70);
+	color: ghostwhite;
 }
 
-#custTbl thead {
-	background-color: rgb(20, 188, 206) !important;
+#custTbl thead{
+	background-color: rgb(20,188,206) !important;
 	text-align: left !important;
 }
 
 /* ===============  END FORMS STYLES ==================== */
 
 /* ===============  SOCIAL MEDIA ICON STYLES ==================== */
+
